# VibeHub

./: .gitignore  AGENTS.md  LICENSE  README.md  README_EN.md  README_TC.md  index.html  package-lock.json  package.json  promo.html  release.ps1  start-dev.ps1
.github/workflows/: build.yml  release.yml
.vibehub/: housekeeping.yaml  project.yaml  state.yaml  workflow.yaml
.vibehub/adapters/: config.yaml  sync-state.yaml
.vibehub/agent-view/: current-context.md  current.md  handoff.md
.vibehub/journal/: index.md
.vibehub/rules/: autonomy.yaml  hard-rules.md  loop-detection.yaml  phase-rules.yaml  preferences.yaml  research-triggers.yaml  review.yaml
.vibehub/tasks/: current
dev_docs/: dev-roadmap.md  vibehub-v2-r10.md
dev_docs/codex-prompts/: 01-init-vibehub.md
src/: main.tsx
src-tauri/: Cargo.toml  cargo_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  launcher.rs  main.rs  models.rs  process_util.rs  scanner.rs  storage.rs  updater.rs
src-tauri/src/gateway/: cache.rs  config.rs  converter.rs  mod.rs  proxy.rs  resilience.rs  stats.rs
src-tauri/src/vibehub/: agent_adapter.rs  agent_view.rs  context.rs  current.rs  drift.rs  handoff.rs  init.rs  journal.rs  knowledge.rs  mod.rs  review.rs  start_task.rs  status.rs
src/components/: Header.tsx  LaunchDialog.tsx  Layout.tsx  ProjectCard.tsx  ProjectEditDialog.tsx  Sidebar.tsx  SortableProjectCard.tsx  UpdateChecker.tsx  VibehubCockpitDialog.tsx  VibehubProjectCenter.tsx
src/locales/: en.json  zh-TW.json  zh.json
(+37 files in other folders)
